force-app/main/default/objects/ContentVersion/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <label>File Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>