force-app/main/default/objects/ContentVersion/fields/Form_css_id__c.field-meta.xml
<CustomField>
    <fullName>Form_css_id__c</fullName>
    <label>Form css id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>