force-app/main/default/objects/ContentVersion/fields/Unique_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_File_Name__c</fullName>
    <label>Unique File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>